# resumo-evolucoes-clinicas

./: .env.example  .gitignore  AGENTS.md  README.md  aghu.py  app.py  busca-pcts-setor.py  busca_pacientes_censo.py  busca_todos_pacientes.py  busca_todos_pacientes_slim.py  censo_unidades.py  config.py  fluxo_botao_pol.md  formato_json_evolucoes.md  llm.py  main.py  path2.py  pyproject.toml  source_system.py  work_manager.py
prompts/: resumo.txt
static/: app.js  styles.css
templates/: base.html  index.html  result.html
